# alion

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.dashboard  Makefile  PROJECT_OVERVIEW.docx  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml  railway.toml  start.sh  stop.sh  ~$OJECT_OVERVIEW.docx
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
apps/dashboard/: capacitor.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.tsbuildinfo  vercel.json
apps/dashboard/.claude/: launch.json
apps/dashboard/android/: capacitor.settings.gradle
apps/dashboard/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
data/labels/: c71b080b-d3ca-4133-882f-f386ddc3d2ad.json
data/ml/: punch_classifier_v1.pkl  punches_dataset.csv
decisions/: 000-template.md  001-module-boundaries.md  002-encryption-deferred.md  003-cv-velocity-scope-amendment.md  004-phase-isolation-hardening.md  005-additive-fields-on-v1.md  006-session-clock-t-zero.md
docs/: COACH_NOTES.md  CV_ROADMAP.md
docs/studies/: RQ1.md
migrations/: env.py  script.py.mako
migrations/versions/: 0092952195cf_extend_coach_referee_fields.py  1ca85f671aa5_add_study_condition_to_session.py  1f0501f1da74_add_punch_type_column.py  61d4935702b2_add_fighter_team_bio_history_titles_.py  6554ed244684_baseline_phase_1_schema.py  a1b2c3d4e5f6_imu_sample_table.py  b2c3d4e5f6a7_rq1_advice_cache_and_ratings.py  bcaa63d4ff90_add_session_baseline_hrv_columns.py  bd10d9e3e9bb_add_coaches_referees_medical_records_.py  c0dc926843da_session_round_config_attachments.py  c3d4e5f6a7b8_consensus_event_table.py  d4e5f6a7b8c9_round_plan_table.py  e5f6a7b8c9d0_add_pose_backend_to_session.py
scripts/: check_camera.py  demo_fusion.py  evaluate.py  migrate_sqlite_to_pg.py  process_video.py  record_api.py  record_live.py  test_polar.py  wipe_data.py
scripts/ml/: collect_data.py  prep_olympic_boxing.py  prep_public_dataset.py  quality_check.py  relabel_olympic.py  test_model.py  train_model.py  train_punch_lstm.py
scripts/studies/: rq1_aggregate.py  rq1_sessions.py  rq1_stats.py
scripts/synth/: hrv.py
studies/: README.md
tests/: conftest.py
tests/contracts/: test_v1_api_contract.py
tests/integration/: test_api_fighters.py  test_api_hrv.py  test_api_sessions.py
tests/unit/: test_contracts.py  test_evaluation.py  test_hrv_metrics.py  test_hrv_replay.py  test_load_swc.py  test_parquet_roundtrip.py  test_performance.py  test_punch_detector.py  test_punch_type_classifier.py  test_readiness.py  test_session_clock.py  test_store_repo.py  test_velocity_refiner.py
(+68 files in other folders)
